style search button and field, fix spacing to center type of products pages

--- a/themes/inhabitent-theme/sass/_page-templates.scss
+++ b/themes/inhabitent-theme/sass/_page-templates.scss
@@ -164,8 +164,7 @@ body .archive {
   }
 
   .entry-content {
-    margin-left: 80px;
-    margin-right: 80px;
+    @extend .container;
     justify-content: center;
     display: grid;
     text-align: center;
